--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
     <div class="login-container">
         <h2>Login</h2>
         <form>
-            <input type="text" placeholder="Digite seu usuário" required>
-            <input type="password" placeholder="Digite sua senha" required>
+            <input type="text" placeholder="Digite seu usuário" required />
+            <input type="password" placeholder="Digite sua senha" required />
             <button type="submit">Fazer Login</button>
         </form>
     </div>
+    <label class="switch">
+        <input type="checkbox" />
+        <span class="slider"></span>
+    </label>
+
+    <script src="switch_dark.js"></script>
 </body>
 </html>
