--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
             <button type="submit">Fazer Login</button>
         </form>
     </div>
-    <label class="switch">
-        <input type="checkbox" />
-        <span class="slider"></span>
-    </label>
+
+    <div class="switch-container">
+        <label>
+            <input type="checkbox" />
+            <span class="slider"></span>
+        </label>
+    </div>
 
     <script src="switch_dark.js"></script>
 </body>
