Adiciona label ao modo escuro

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <input type="checkbox" />
             <span class="slider"></span>
         </label>
+        <label>
+            <p id="switch-details">Modo Escuro</p>
+        </label>
     </div>
 
     <script src="switch_dark.js"></script>
