style: altera o nome de id dos inputs

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="login-container">
         <h2>Login</h2>
         <form>
-            <input id="user" type="text" placeholder="Digite seu usuário" required />
-            <input id="password" type="password" placeholder="Digite sua senha" required />
+            <input id="user-input" type="text" placeholder="Digite seu usuário" required />
+            <input id="password-input" type="password" placeholder="Digite sua senha" required />
             <button type="submit">Fazer Login</button>
         </form>
     </div>
